[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://scenes/reacteur.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ship.png" type="Texture" id=3]
[ext_resource path="res://assets/ship_damage.png" type="Texture" id=4]
[ext_resource path="res://assets/ship_dash.png" type="Texture" id=5]
[ext_resource path="res://scenes/dashParticle.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/dashParticle2.tscn" type="PackedScene" id=7]
[ext_resource path="res://sounds/Sfx_Shoot.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/Sfx_Vaisseau_Dash.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/Sfx_Vaisseau_Damage.wav" type="AudioStream" id=10]
[ext_resource path="res://sounds/Sfx_Vaisseau_Explose.wav" type="AudioStream" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "dash",
"speed": 5.0
} ]

[sub_resource type="ConvexPolygonShape2D" id=2]

[node name="Area2D" type="Area2D" groups=[
"Player",
]]
script = ExtResource( 1 )

[node name="reacteur" parent="." instance=ExtResource( 2 )]
modulate = Color( 0.423529, 0.960784, 1, 1 )
position = Vector2( -35, 0 )
rotation = -3.14159
scale = Vector2( 0.39178, -0.161128 )
amount = 100
lifetime = 0.4

[node name="ship" type="AnimatedSprite" parent="."]
rotation = 1.5708
frames = SubResource( 1 )
animation = "normal"

[node name="dashParticle" parent="." instance=ExtResource( 6 )]
position = Vector2( 50, 0 )
rotation = -3.14159

[node name="dashParticle2" parent="." instance=ExtResource( 7 )]
position = Vector2( 30, 0 )
rotation = 1.5708

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
rotation = 1.57079
scale = Vector2( 6.55714, 8.15848 )
shape = SubResource( 2 )

[node name="sound_shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -25.0

[node name="sound_dash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -25.0

[node name="sound_damage" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -20.0

[node name="sound_death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -20.0

[node name="TimerDead" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="TimerDashInlvu" type="Timer" parent="."]

[node name="TimerDashCooldown" type="Timer" parent="."]
wait_time = 0.4

[node name="TimerDamageInlvu" type="Timer" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Area2D_mouse_exited"]
[connection signal="timeout" from="TimerDead" to="." method="_on_TimerDead_timeout"]
[connection signal="timeout" from="TimerDashInlvu" to="." method="_on_TimerDashInlvu_timeout"]
[connection signal="timeout" from="TimerDashCooldown" to="." method="_on_TimerDashCooldown_timeout"]
[connection signal="timeout" from="TimerDamageInlvu" to="." method="_on_TimerDamageInlvu_timeout"]
